# r2d2-redis

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE.html  README.md  docker-compose.yml  release.toml
.github/: dependabot.yml
.github/workflows/: check.yml  rust.yml  test.yml
.travis/: deploy_key.enc  gh-pages.sh  update_docs.sh
doc/: search-index.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/r2d2/: trait.ConnectionManager.js
doc/implementors/std/error/: trait.Error.js
doc/master/: aliases.js  search-index.js
doc/master/doc/: search-index.js
doc/master/doc/implementors/r2d2/: trait.ManageConnection.js
doc/master/doc/r2d2_redis/: index.html
doc/master/doc/src/r2d2_redis/: lib.rs.html
doc/master/implementors/r2d2/: trait.ManageConnection.js
doc/master/r2d2_redis/: all.html  enum.Error.html  index.html  struct.RedisConnectionManager.html
doc/master/src/r2d2_redis/: lib.rs.html
doc/r2d2_redis/: enum.Error.html  index.html  struct.RedisConnectionManager.html
doc/src/r2d2_redis/: lib.rs.html
doc/upgrade/r2d2_redis/: RedisConnectionManager.t.html  enum.Error.html
doc/upgrade/src/r2d2_redis/: lib.rs.html
doc/v0.2.0/r2d2_redis/: enum.Error.html  sidebar-items.js
doc/v0.3.1/: search-index.js
doc/v0.4.0/implementors/r2d2/: trait.ManageConnection.js
doc/v0.4.0/r2d2_redis/: enum.Error.html  index.html  struct.RedisConnectionManager.html
doc/v0.5.1/r2d2_redis/: index.html  struct.RedisConnectionManager.html
doc/v0.5.1/src/r2d2_redis/: lib.rs.html
doc/v0.6.0/r2d2_redis/: enum.Error.html  index.html
doc/v0.6.0/src/r2d2_redis/: lib.rs.html
examples/: counter.rs  ping.rs
scripts/: update-doc-urls.sh  update-versions.sh  volume-up.sh
src/: lib.rs
tests/: test.rs
(+13 files in other folders)
