[package]
name = "r2d2_redis"
version = "0.12.0"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Nev Delap <nevdelap@gmail.com>",
    "Simo Kinnunen <simo@shoqolate.com>",
    "Jan-Erik Rediger <janerik@fnordig.de>"
]
license = "MIT"
description = "Redis support for the r2d2 connection pool"
repository = "https://github.com/sorccu/r2d2-redis"
documentation = "https://docs.rs/r2d2_redis/0.12.0"
keywords = ["redis", "pool", "database", "r2d2"]
include = ["src/**/*", "LICENSE", "Cargo.toml"]

[dependencies]
r2d2 = "0.8"
redis = "0.13"
