[package]
authors = [
    "Biblius Khan <crazycompanyxxl@gmail.com>",
    "Jan-Erik Rediger <janerik@fnordig.de>",
    "Nev Delap <nevdelap@gmail.com>",
    "Simo Kinnunen <simo@shoqolate.com>",
    "Steven Fackler <sfackler@gmail.com>",
]
description = "Redis support for the r2d2 connection pool"
edition = "2021"
include = ["Cargo.toml", "LICENSE", "src/**/*"]
keywords = ["database", "pool", "r2d2", "redis"]
license = "MIT"
name = "r2d2_redis"
repository = "https://github.com/biblius/r2d2-redis"
version = "0.14.1"

[dependencies]
r2d2 = "0.8.1"
redis = "0.22.3"
